<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_gallery"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/menu_gallery" />
        <item
            android:id="@+id/nav_slideshow"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/menu_slideshow" />
        <item
            android:id="@+id/dataFragment"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="Уникальная информация" />
        <item
            android:id="@+id/webViewFragment"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="Браузер" />
        <item
            android:id="@+id/WorkerFragment"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="Воркер" />
        <item
            android:id="@+id/CameraFragment"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="Камера" />
        <item
            android:id="@+id/MicrifoneFragment"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="Микрофон" />
        <item
            android:id="@+id/SensorFragment"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="Сенсор" />
    </group>
</menu>