<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.example.proga.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_gallery"
        android:name="com.example.proga.ui.gallery.GalleryFragment"
        android:label="@string/menu_gallery"
        tools:layout="@layout/fragment_gallery" />

    <fragment
        android:id="@+id/nav_slideshow"
        android:name="com.example.proga.ui.slideshow.SlideshowFragment"
        android:label="@string/menu_slideshow"
        tools:layout="@layout/fragment_slideshow" />
    <fragment
        android:id="@+id/dataFragment"
         android:name="com.example.proga.DataFragment"
        android:label="fragment_data"
        tools:layout="@layout/fragment_data" />
    <fragment
        android:id="@+id/webViewFragment"
        android:name="com.example.proga.WebViewFragment"
        android:label="fragment_web_view"
        tools:layout="@layout/fragment_web_view" />
    <fragment
        android:id="@+id/WorkerFragment"
        android:name="com.example.proga.WorkerFragment"
        android:label="fragment_web_view"
        tools:layout="@layout/fragment_web_view" />
    <fragment
        android:id="@+id/CameraFragment"
        android:name="com.example.proga.CameraFragment"
        android:label="camera"
        tools:layout="@layout/fragment_camera" />
    <fragment
        android:id="@+id/MicrifoneFragment"
        android:name="com.example.proga.MicrifoneFragment"
        android:label="Micro"
        tools:layout="@layout/fragment_micrifone" />
    <fragment
        android:id="@+id/SensorFragment"
        android:name="com.example.proga.SensorFragment"
        android:label="Sensor"
        tools:layout="@layout/fragment_sensor" />
</navigation>